packages/svelte/tests/compiler-errors/samples/empty-directive-name/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'empty-directive-name',
		message: 'Action name cannot be empty',
		position: [8, 8]
	}
});
